...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvH-J9-mTb">
                                <rect key="frame" x="25" y="265" width="364" height="70"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="Ex5-JB-caC"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Show me the cars !!" cornerStyle="medium">
                                    <backgroundConfiguration key="background">
                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                                    </backgroundConfiguration>
                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleHeadline"/>
                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
...
                            <constraint firstItem="gYP-sa-gGt" firstAttribute="trailing" secondItem="0xm-ck-ULL" secondAttribute="trailing" id="b38-r9-saa"/>
                            <constraint firstItem="ZqC-Xm-tjN" firstAttribute="leading" secondItem="gYP-sa-gGt" secondAttribute="leading" id="eUD-8M-mPJ"/>
                            <constraint firstItem="ZqC-Xm-tjN" firstAttribute="top" secondItem="0xm-ck-ULL" secondAttribute="bottom" id="g53-Qn-q3a"/>
                            <constraint firstItem="0xm-ck-ULL" firstAttribute="top" secondItem="gYP-sa-gGt" secondAttribute="top" id="muF-aR-XgS"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Makes" id="pyv-Lf-xoq"/>
                    <connections>
                        <outlet property="makesLoader" destination="uey-Ly-X6w" id="4hF-1L-v2J"/>
                        <outlet property="tableView" destination="0xm-ck-ULL" id="RqT-RE-6s9"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="aFo-Wb-Rgk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="Vhh-Ce-K6f" firstAttribute="leading" secondItem="FHN-mA-LEI" secondAttribute="leading" id="WOJ-1h-JGK"/>
                            <constraint firstItem="FHN-mA-LEI" firstAttribute="trailing" secondItem="Vhh-Ce-K6f" secondAttribute="trailing" id="mQ3-Fw-r0R"/>
                            <constraint firstItem="FHN-mA-LEI" firstAttribute="bottom" secondItem="Vhh-Ce-K6f" secondAttribute="bottom" id="rB1-Bx-lG9"/>
                            <constraint firstItem="Ukq-QA-vSu" firstAttribute="top" secondItem="FHN-mA-LEI" secondAttribute="top" id="tA8-aa-vM5"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Models" id="EqG-wi-qM4"/>
                    <connections>
                        <outlet property="modelsLoader" destination="UHF-UP-wEs" id="NqM-NM-GpW"/>
                        <outlet property="tableView" destination="Ukq-QA-vSu" id="2ji-mR-6jL"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="zCC-UT-8O0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGJ-Uz-Ul2">
                                        <rect key="frame" x="0.0" y="658" width="374" height="70"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="70" id="qPG-21-Qod"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Exteriors" cornerStyle="medium">
                                            <backgroundConfiguration key="background">
                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                            </backgroundConfiguration>
                                            <fontDescription key="titleFontDescription" style="UICTFontTextStyleSubhead"/>
                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </buttonConfiguration>
...
                            <constraint firstItem="mwf-X2-AQf" firstAttribute="leading" secondItem="dTM-tS-5mm" secondAttribute="leading" constant="20" id="Ncb-K1-1tR"/>
                            <constraint firstItem="mwf-X2-AQf" firstAttribute="top" secondItem="dTM-tS-5mm" secondAttribute="top" id="YGr-2j-kgK"/>
                            <constraint firstItem="dTM-tS-5mm" firstAttribute="bottom" secondItem="mwf-X2-AQf" secondAttribute="bottom" id="Yxk-c5-jk4"/>
                            <constraint firstItem="rWx-bz-7xi" firstAttribute="centerY" secondItem="vQn-w9-V2y" secondAttribute="centerY" id="ob4-WN-vBl"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Details" id="tUu-oO-yxi"/>
                    <connections>
                        <outlet property="capacity" destination="Yzu-EN-0ra" id="tKD-09-aJw"/>
                        <outlet property="detailsLoder" destination="rWx-bz-7xi" id="j3U-oS-qwB"/>
                        <outlet property="engine" destination="xuV-lX-h2I" id="X5A-jF-7LC"/>
                        <outlet property="make" destination="kyH-uH-2Aa" id="9oK-az-CUR"/>
                        <outlet property="type" destination="SSM-ao-8Gz" id="PxJ-V6-ZLj"/>
...
                            <constraint firstItem="8B7-BH-dSd" firstAttribute="leading" secondItem="Zd8-3p-3C3" secondAttribute="leading" id="Xke-io-n47"/>
                            <constraint firstItem="C4b-CE-uvZ" firstAttribute="centerX" secondItem="qh5-Um-k0F" secondAttribute="centerX" id="fq2-cJ-cwx"/>
                            <constraint firstItem="8B7-BH-dSd" firstAttribute="top" secondItem="Zd8-3p-3C3" secondAttribute="top" id="id0-LB-X5j"/>
                            <constraint firstItem="Zd8-3p-3C3" firstAttribute="trailing" secondItem="8B7-BH-dSd" secondAttribute="trailing" id="s8M-yg-3I7"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Preview" id="gUf-Vk-fXW"/>
                    <connections>
                        <outlet property="imageView" destination="8B7-BH-dSd" id="NtC-nv-wbn"/>
                        <outlet property="previewLoader" destination="C4b-CE-uvZ" id="74v-as-IIj"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dRe-TZ-RMm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
